--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mail-function",
   "version": "1.0.0",
   "description": "Simple nodejs app to send email on HTTP request",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/markbowman100/mail-function#readme",
   "dependencies": {
+    "mailgun-js": "^0.22.0",
     "nodemailer": "^6.4.6"
   }
 }
